--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -1,1 +1,30 @@
-<p>repos works!</p>
+<div class="container">
+
+    <div class="row repo mt-5" *ngFor="let item of repoList">
+        <div class="mt-5" class="col-3">
+            <img src="{{item.owner.avatar_url}}" alt="" class="w-50 rounded-circle ">
+        </div>
+        <div class="col-9">
+            <div class="font-weight-bold">
+                {{item.name}}
+            </div>
+            <div class="mt-2">
+                {{item.description}}
+            </div>
+            <div class="d-flex">
+                <div class="mr-4 p-2 mt-4 border border-dark">
+                    stars: {{item.stargazers_count/1000}}k
+                </div>
+                <div class="mr-4 p-2 mt-4 border border-dark">
+                    issues: {{item.open_issues/1000}}k
+                </div>
+                <div class="mr-4 mt-4">
+                    {{ item.full_name}}
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div *ngIf="loading">Loading data..........</div>
+</div>
