--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -16,7 +16,7 @@
                     stars: {{item.stargazers_count |numberSuffix}}
                 </div>
                 <div class="mr-4 p-2 mt-4 border border-dark">
-                    issues: {{item.open_issues}}
+                    issues: {{item.open_issues |numberSuffix}}
                 </div>
                 <div class="mr-4 mt-4">
                     {{ item.full_name}}
