--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -26,5 +26,5 @@
 
 
     </div>
-    <div *ngIf="loading">Loading data..........</div>
+    <div *ngIf="loading" class="text-center">Loading data..........</div>
 </div>
