--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -1,30 +1,11 @@
 <div class="container">
 
-    <div class="row repo mt-5" *ngFor="let item of repoList">
-        <div class="mt-5" class="col-3">
-            <img src="{{item.owner.avatar_url}}" alt="" class="w-50 rounded-circle ">
-        </div>
-        <div class="col-9">
-            <div class="font-weight-bold">
-                {{item.name}}
-            </div>
-            <div class="mt-2">
-                {{item.description}}
-            </div>
-            <div class="d-flex">
-                <div class="mr-4 p-2 mt-4 border border-dark">
-                    stars: {{item.stargazers_count |numberSuffix}}
-                </div>
-                <div class="mr-4 p-2 mt-4 border border-dark">
-                    issues: {{item.open_issues |numberSuffix}}
-                </div>
-                <div class="mr-4 mt-4">
-                    {{ item.full_name}}
-                </div>
-            </div>
-        </div>
+    <div class="row  mt-5" *ngFor="let item of repoList">
 
+        <app-detail-repo [item]="item"></app-detail-repo>
 
     </div>
-    <div *ngIf="loading" class="text-center">Loading data..........</div>
+    <div class="text-center " *ngIf="loading">
+        <div class=" spinner-border text-primary mt-5"></div>
+    </div>
 </div>
